<resources>
    <string name="app_name">REVIER</string>

    <string name="item_1">New Styles</string>
    <string name="item_2">Add Info</string>
    <string name="item_3">Reviews</string>
    <string name="item_4">Profile</string>
    <string name="item_5">Maps</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 8 characters !</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="name">Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member ? Get registered in <b>Revier</b> now !</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back >>]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password ?</string>
    <string name="forgot_password_msg">Stay calm and Cool brother JUST entered registered Email to sent you reset instruction and We will work for now</string>
    <string name="title_activity_maps">Map</string>
</resources>